<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@mipmap/images"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nota"
        android:textColor="#e7e735"
        android:id="@+id/textView"
        android:textSize="40dp"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/etNota"
        android:textColor="#ffc20b0c"
        android:inputType="phone"
        android:textSize="30dp"
        android:textStyle="italic"
        android:background="#fffff2fe"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/porcentaje"
        android:textColor="#e7e735"
        android:id="@+id/textView2"
        android:textSize="40dp"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:id="@+id/etPorc"
        android:textColor="#ffc20b0c"
        android:inputType="phone"
        android:textSize="30dp"
        android:textStyle="italic"
        android:background="#fffff2fe"
        android:layout_weight="0.09" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.19">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/procesar"
            android:id="@+id/btnProcesar"
            android:drawablePadding="4dp"
            android:drawableLeft="@drawable/proc"
            android:onClick="OneclickProceso" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reiniciar"
            android:id="@+id/btnReiniciar"
            android:drawablePadding="4dp"
            android:drawableLeft="@drawable/reeiniciar"
            android:onClick="OneclickReiniciar" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ayuda"
            android:id="@+id/btnLimpiar"
            android:drawablePadding="4dp"
            android:drawableLeft="@drawable/aa"
            android:onClick="OneClickLimpiar" />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/transcurrido"
        android:textColor="#e7e735"
        android:id="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTransc"
        android:textColor="#ffc20b0c"
        android:textSize="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/acomulado"
        android:textColor="#e7e735"
        android:id="@+id/textView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvAcomulado"
        android:textColor="#ffc20b0c"
        android:textSize="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/promedio"
        android:textColor="#e7e735"
        android:id="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvPromedio"
        android:textColor="#ffc20b0c"
        android:textSize="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nota_sacar"
        android:textColor="#e7e735"
        android:id="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvNotaSa"
        android:textColor="#ffc20b0c"
        android:textSize="25dp"/>
</LinearLayout>
